Fixed dark mode bugs
Fixed lack of dark mode in full screen image viewer

--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -49,14 +49,10 @@ body.dark-mode .dark-mode-overlay {
 .image-wrapper {
     position: relative;
     display: flex;
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .image-wrapper img {
     display: block;
-    max-width: 100%;
-    max-height: 100%;
     object-fit: contain;
 }
 
@@ -270,7 +266,7 @@ table {
     width: 28vw;
     height: 45vh;
     padding: 10px;
-    border: 2px solid #dcdcdc;
+    border: 2px solid var(--border-color);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -380,6 +376,10 @@ table {
     backdrop-filter: blur(40px);
 }
 
+.dark-mode .image-viewer-overlay {
+    background: rgba(0, 0, 0, 0.8);
+}
+
 .image-viewer-header {
     padding: 20px;
     display: flex;
@@ -387,6 +387,10 @@ table {
     align-items: center;
     background: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(40px);
+}
+
+.dark-mode .image-viewer-header {
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .viewer-controls {
@@ -419,8 +423,6 @@ table {
 }
 
 .image-viewer-container img {
-    max-width: 90%;
-    max-height: 90%;
     /* transition: transform 0.1s ease-out; */
     user-select: none;
 }
